--- a/Beadando_notebook.ipynb
+++ b/Beadando_notebook.ipynb
@@ -16,6 +16,16 @@
         {
             "cell_type": "markdown",
             "source": [
+                "Logikai adatmodell: GitHubon png-ként csatolva"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "c4ad7bae-17df-4fde-9357-37a3c1940b91"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "Adatbázis létrehozása, valamint feltöltése adatokkal"
             ],
             "metadata": {
@@ -26,36 +36,36 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Csapat tábla\r\n",
-                "CREATE TABLE Csapat (\r\n",
-                "    csapat_id INT AUTO_INCREMENT PRIMARY KEY,\r\n",
-                "    csapat_nev VARCHAR(100) NOT NULL,\r\n",
-                "    stadion_id INT,\r\n",
-                "    mez_szin VARCHAR(50),\r\n",
-                "    CONSTRAINT fk_csapat_stadion FOREIGN KEY (stadion_id) REFERENCES Stadion(stadion_id)\r\n",
-                ");\r\n",
-                "\r\n",
                 "-- Stadion tábla\r\n",
                 "CREATE TABLE Stadion (\r\n",
-                "    stadion_id INT AUTO_INCREMENT PRIMARY KEY,\r\n",
-                "    nev VARCHAR(100) NOT NULL,\r\n",
-                "    helyszin VARCHAR(100) NOT NULL,\r\n",
+                "    stadion_id INT IDENTITY(1,1) PRIMARY KEY,\r\n",
+                "    nev NVARCHAR(100) NOT NULL,\r\n",
+                "    helyszin NVARCHAR(100) NOT NULL,\r\n",
                 "    kapacitas INT\r\n",
+                ");\r\n",
+                "\r\n",
+                "-- Csapat tábla\r\n",
+                "CREATE TABLE Csapat (\r\n",
+                "    csapat_id INT IDENTITY(1,1) PRIMARY KEY,\r\n",
+                "    csapat_nev NVARCHAR(100) NOT NULL,\r\n",
+                "    stadion_id INT,\r\n",
+                "    mez_szin NVARCHAR(50),\r\n",
+                "    CONSTRAINT fk_csapat_stadion FOREIGN KEY (stadion_id) REFERENCES Stadion(stadion_id)\r\n",
                 ");\r\n",
                 "\r\n",
                 "-- Játékos tábla\r\n",
                 "CREATE TABLE Jatekos (\r\n",
-                "    jatekos_id INT AUTO_INCREMENT PRIMARY KEY,\r\n",
-                "    jatekos_nev VARCHAR(100) NOT NULL,\r\n",
+                "    jatekos_id INT IDENTITY(1,1) PRIMARY KEY,\r\n",
+                "    jatekos_nev NVARCHAR(100) NOT NULL,\r\n",
                 "    szu_dat DATE,\r\n",
-                "    nemzetiseg VARCHAR(50),\r\n",
+                "    nemzetiseg NVARCHAR(50),\r\n",
                 "    csapat_id INT,\r\n",
                 "    CONSTRAINT fk_jatekos_csapat FOREIGN KEY (csapat_id) REFERENCES Csapat(csapat_id)\r\n",
                 ");\r\n",
                 "\r\n",
                 "-- Meccs tábla\r\n",
                 "CREATE TABLE Meccs (\r\n",
-                "    meccs_id INT AUTO_INCREMENT PRIMARY KEY,\r\n",
+                "    meccs_id INT IDENTITY(1,1) PRIMARY KEY,\r\n",
                 "    hazai_gol INT DEFAULT 0,\r\n",
                 "    idegen_gol INT DEFAULT 0,\r\n",
                 "    hazai_csapat_id INT NOT NULL,\r\n",
@@ -69,13 +79,14 @@
                 "\r\n",
                 "-- Gól tábla\r\n",
                 "CREATE TABLE Gol (\r\n",
-                "    gol_id INT AUTO_INCREMENT PRIMARY KEY,\r\n",
+                "    gol_id INT IDENTITY(1,1) PRIMARY KEY,\r\n",
                 "    perc INT NOT NULL,\r\n",
                 "    jatekos_id INT NOT NULL,\r\n",
                 "    meccs_id INT NOT NULL,\r\n",
                 "    CONSTRAINT fk_gol_jatekos FOREIGN KEY (jatekos_id) REFERENCES Jatekos(jatekos_id),\r\n",
                 "    CONSTRAINT fk_gol_meccs FOREIGN KEY (meccs_id) REFERENCES Meccs(meccs_id)\r\n",
-                ");"
+                ");\r\n",
+                ""
             ],
             "metadata": {
                 "azdata_cell_guid": "db603f39-bf8d-4099-ac2e-c22e165f8409",
@@ -255,6 +266,16 @@
             "attachments": {}
         },
         {
+            "cell_type": "markdown",
+            "source": [
+                "Gólok nemzetiségek szerint"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "c268fc20-f2a7-43d2-b141-9a73409becce"
+            },
+            "attachments": {}
+        },
+        {
             "cell_type": "code",
             "source": [
                 "SELECT \r\n",
@@ -267,10 +288,22 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "b387e29d-f0c7-4c28-b076-dce20b87687a",
-                "language": "sql"
+                "language": "sql",
+                "tags": []
             },
             "outputs": [],
             "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Melyik csapat lőtte a legtöbb gólt"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "9abf572d-b086-44b6-8714-1cd4f01f7fc9"
+            },
+            "attachments": {}
         },
         {
             "cell_type": "code",
@@ -293,6 +326,17 @@
             },
             "outputs": [],
             "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Fradi eddigi meccseinek statisztikái"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "83246058-1030-40a5-90b4-0240ef1a682e"
+            },
+            "attachments": {}
         },
         {
             "cell_type": "code",
@@ -320,6 +364,17 @@
             "execution_count": null
         },
         {
+            "cell_type": "markdown",
+            "source": [
+                "Legnagyobb gólkülönbségű meccsek"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "6f2c2696-7882-42b1-9dc4-0a51c7d4c6b6"
+            },
+            "attachments": {}
+        },
+        {
             "cell_type": "code",
             "source": [
                 "SELECT TOP 5\r\n",
@@ -341,6 +396,16 @@
             },
             "outputs": [],
             "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Tabella"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "6e02973c-592b-488c-abf9-7743d08a4a07"
+            },
+            "attachments": {}
         },
         {
             "cell_type": "code",
